--- a/app/src/main/res/layout/activity_fun_facts.xml
+++ b/app/src/main/res/layout/activity_fun_facts.xml
@@ -4,9 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="?attr/colorPrimary"
-    tools:context=".FunFactsActivity"
-    android:padding="50dp">
+    android:background="#37b835"
+    android:padding="50dp"
+    android:id="@+id/relativeLayout"
+    tools:context=".FunFactsActivity">
 
 
     <TextView
@@ -19,21 +20,18 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="198dp"
+        android:layout_centerInParent="true"
         android:text="Ants stretch when they wake up in the morning, and hit Enter"
         android:textColor="@android:color/white"
         android:textSize="24sp" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/mainbutton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:background="@android:color/white"
+        android:background="#de22bc"
         android:text="Show Another Funfacts" />
 
 
